--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ---
 layout: default
+title: Rabin's Quill
+description: This is a personal Blog of Rabin Gaire and he is ruby on rails programmer
 ---
-
 <div class="home ">
 
   <h1 class="page-heading text-center">Posts</h1>
