--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Rabin's Quill
-description: This is a personal Blog of Rabin Gaire and he is ruby on rails programmer
+description: This is a personal Blog of Rabin Gaire and He is ruby on rails programmer.
 ---
 <div class="home ">
 
