looks changed on about page

--- a/about.html
+++ b/about.html
@@ -7,10 +7,13 @@ permalink: /about/
   <img src="../images/my-pic.jpg">
 </div>
 <div class="description">
-  <p>I am Rabin Gaire from Nepal. I am a programmer. I am really trying hard to learn ruby on rails.
-     I have done PHP for more then two years. I have been programming for more then two years. Ok Ok I got it
-     Crying out loud I started programming with PHP. Is it ok uffffff. I am a funny guy. Well Aliens Call me so.
-     I have time travelled and I know a little secret. The person Reading this blog is going to be super cool in future.
-     Other then that Oh! guess I think you find me funny. Go ahead search me in fb. Uh are you still here go ahead
-     don't feel shy. Love You :)  </p>
+  <p>  
+    Hello Welcome I am Rabin Gaire from Nepal, Land of Mountains and a birthplace of lord buddha. I love programming. I am a rails developer. I also love JavaScript. I am familiar with react.js . Taking about a hobby I love to write about stuff (That's why this blog exists). 
+  </p>
+</div>
+<div class="social-media-links text-center">
+  <a href="https://www.facebook.com/robbengaire" class="fa fa-facebook-official fa-3x" aria-hidden="true"></a>
+  <a href="https://twitter.com/robin_gaire" class="fa fa-twitter-square fa-3x" aria-hidden="true"></a>
+  <a href="https://github.com/rabingaire" class="fa fa-github-square fa-3x" aria-hidden="true"></a>
+  <a href="https://np.linkedin.com/in/rabin-gaire-b4187a95" class="fa fa-linkedin-square fa-3x" aria-hidden="true"></a>
 </div>
