--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@ permalink: /about/
 </div>
 <div class="social-media-links text-center">
   <a href="https://www.facebook.com/robbengaire" class="fa fa-facebook-official fa-3x" aria-hidden="true"></a>
-  <a href="https://twitter.com/robin_gaire" class="fa fa-twitter-square fa-3x" aria-hidden="true"></a>
+  <a href="https://twitter.com/rabingaire" class="fa fa-twitter-square fa-3x" aria-hidden="true"></a>
   <a href="https://github.com/rabingaire" class="fa fa-github-square fa-3x" aria-hidden="true"></a>
   <a href="https://np.linkedin.com/in/rabin-gaire-b4187a95" class="fa fa-linkedin-square fa-3x" aria-hidden="true"></a>
 </div>
