--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@ permalink: /about/
   </p>
 </div>
 <div class="social-media-links text-center">
-  <a href="https://www.facebook.com/gairerabin" class="fa fa-facebook-official fa-3x" aria-hidden="true"></a>
+  <a href="https://www.facebook.com/heyrabin" class="fa fa-facebook-official fa-3x" aria-hidden="true"></a>
   <a href="https://twitter.com/rabingaire" class="fa fa-twitter-square fa-3x" aria-hidden="true"></a>
   <a href="https://github.com/rabingaire" class="fa fa-github-square fa-3x" aria-hidden="true"></a>
   <a href="https://np.linkedin.com/in/rabin-gaire-b4187a95" class="fa fa-linkedin-square fa-3x" aria-hidden="true"></a>
